--- a/photoStyle.css
+++ b/photoStyle.css
@@ -222,7 +222,7 @@ hr {
   top: 0rem;
   right: 0.2rem;
   width: 100%;
-  height: 90%;
+  height: 100%;
   z-index: 9;
   display: none;
 }
@@ -537,6 +537,11 @@ hr {
   	padding-right: 5rem;
     grid-template-columns: repeat(1, 1fr);
   }
+   
+  .default {
+    height: 40%;
+  }
+   
  }
 
   @media (max-width: 410px) {
