--- a/styleIndex.css
+++ b/styleIndex.css
@@ -64,7 +64,7 @@ img {
   color: white;
   grid-area: phone;
   min-height: 500px;
-  background: url(img/phoneC6.png);
+  background: url(img/phoneC6.PNG);
   background-size: cover;
   background-position: center;
   padding: 3rem;
