--- a/style.css
+++ b/style.css
@@ -28,6 +28,22 @@
   text-align: center;
 }
 
+#btn-home {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  color: white;
+  background: rgba(186,48,182,0.3);
+  padding: 0.2rem 0.6rem;
+  text-decoration: none;
+  border-radius: 10%;
+}
+
+#btn-home:hover {
+  color: #00fff7;
+  background: #6842f4;
+}
+
 .phone {
   width: 20vw;
   min-width: 300px;
